frontend/test/should_fail/delretypesame_001.grg
rule r{	n:Node;		alternative {		case {						modify {				delete(n);			}		}	}		modify {		m:Node<n>;	}}